# tyshi-engine

./: .clang-format  .gitignore  Animator_8cpp.html  Animator_8cpp__incl.dot  Animator_8h.html  Animator_8h.js  Animator_8h__dep__incl.dot  Animator_8h__incl.dot  Animator_8h_source.html  CMakeLists.txt  Camera_8cpp.html  Camera_8cpp__incl.dot  Camera_8h.html  Camera_8h.js  Camera_8h__dep__incl.dot  Camera_8h__incl.dot  Camera_8h_source.html  Common_8cpp.html  Common_8cpp__incl.dot  Common_8h.html  Common_8h.js  Common_8h__dep__incl.dot  Common_8h__incl.dot  Common_8h_source.html  Core_8h.html  Core_8h.js  Core_8h__dep__incl.dot  Core_8h__incl.dot  Core_8h_source.html  DebugOverlay_8cpp.html  DebugOverlay_8cpp__incl.dot  DebugOverlay_8h.html  DebugOverlay_8h.js  DebugOverlay_8h__dep__incl.dot  DebugOverlay_8h__incl.dot  DebugOverlay_8h_source.html  Engine_8cpp.html  Engine_8cpp__incl.dot  Engine_8h.html  Engine_8h.js  (+145 more)
.github/workflows/: docs-deploy.yml
CMake/: mingw-toolchain.cmake
docs/: Doxyfile
include/Engine/: Animator.h  Camera.h  Common.h  Core.h  DebugOverlay.h  Engine.h  EntityState.h  EntityStateMachine.h  GameState.h  Input.h  Noise.h  ResourceManager.h  Vec2.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_6.js  (+42 more)
src/: Animator.cpp  Camera.cpp  Common.cpp  DebugOverlay.cpp  Engine.cpp  Input.cpp  Noise.cpp  ResourceManager.cpp
test/: TestState.cpp  TestState.h  main.cpp
